Add some styles to completed items

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.0/backbone.localStorage-min.js"></script>
 
   <script src="js/todo.js"></script>
+
+  <style type="text/css">
+    #completed-list li {
+      text-decoration: line-through;
+      color: #cc0000;
+    }
+    ul {
+      list-style-type: none;
+      margin: 20px 10px;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
 
